<resources>
    <string name="app_name">LoginScreen</string>
    <string name="loginlogo">loginLogo</string>
    <string name="app_connect">App Connect</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username_or_email">Email or Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="don_t_have_an_account_sing_up">Don\'t have an account? Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>